# orb

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  .ruff.toml  DEVELOPMENT.md  LICENSE  README.md  install.sh  menubar_app.py  orb_cli.py  package.json  pyproject.toml  setup.py
.github/: setting.json
.github/workflows/: release.yml
.kiro/specs/feedback-driven-improvement/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/obsidian-rag-chatbot/: design.md  requirements.md  tasks.md
.kiro/specs/orb/: .config.kiro  design.md  requirements.md  tasks.md
backend/: config.py  debug_chroma.py  debug_config.py  debug_indexing.py  debug_indexing_fast.py  main.py  mcp_server.py  models.py  requirements.txt  test_parallel_indexing.py  test_proposition_indexing.py
backend/embedding/: __init__.py  base.py  local.py  openai_backend.py
backend/feedback/: retriever.py  store.py
backend/generation/: __init__.py  generator.py
backend/indexing/: __init__.py  indexer.py  parallel_indexer.py
backend/ingestion/: __init__.py  base.py  obsidian.py
backend/llm/: __init__.py  base.py  local.py  openai_backend.py
backend/retrieval/: __init__.py  query_planning.py  retriever.py
backend/routers/: __init__.py  chat.py  config.py  debug.py  dependencies.py  feedback.py  index.py  status.py
backend/tests/: test_chat_router.py  test_config.py  test_embedding.py  test_feedback_properties.py  test_feedback_router.py  test_feedback_store.py  test_generator.py  test_generator_rules.py  test_indexer.py  test_ingestion_base.py  test_llm.py  test_main.py  test_models.py  test_obsidian_ingestor.py  test_query_planning.py  test_retriever.py  test_rule_retriever.py  test_search_modes.py
backend/utils/: date_normalizer.py
frontend/: index.html
frontend/components/: App.jsx
frontend/styles/: components.css  globals.css
frontend/utils/: http.js
