[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orb"
version = "0.1.0"
description = "RAG Chatbot for Obsidian Vaults"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daijiro Miyazawa", email = "dxd5001@gmail.com"},
]
keywords = ["orb", "obsidian", "rag", "chatbot", "ai", "multilingual", "japanese", "english"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "hypothesis>=6.88.0",
    "pytest-asyncio>=0.21.0",
]
menubar = [
    "pystray>=0.19.0",
    "Pillow>=9.0.0",
]

[project.urls]
"Bug Reports" = "https://github.com/dxd5001/orb/issues"
"Source" = "https://github.com/dxd5001/orb"
"Documentation" = "https://github.com/dxd5001/orb/blob/main/README.md"

[project.scripts]
orb = "menubar_app:main"
orb-mcp = "mcp_server:main"

[tool.setuptools]
packages = ["orb"]

[tool.setuptools.package-data]
"orb" = ["*.md", "*.txt", "*.json"]

# Ruff configuration
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-unused-arguments
    "ARG",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # flake8-logging
    "LOG",
    # flake8-comprehensions
    "C4",
    # flake8-bandit (security)
    "S",
    # flake8-datetimez
    "DTZ",
    # flake8-tidy-imports
    "TID",
    # flake8-import-conventions
    "ICN",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-errmsg
    "EM",
    # flake8-print
    "T20",
    # flake8-todos
    "TD",
    # flake8-fixme
    "FIX",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    # Star imports
    "F405",
    # Line too long (handled by Black)
    "E501",
    # Unused arguments (allow underscore prefix)
    "ARG002",
    # Print statements (allow for debugging)
    "T201",
    # TODO comments (allow)
    "TD003",
    # Fixme comments (allow)
    "FIX002",
    # Magic numbers (allow for configuration)
    "S105",
    # Hardcoded passwords (allow for examples)
    "S106",
    # Hardcoded SQL strings (allow)
    "S608",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["orb"]
known-third-party = ["fastapi", "uvicorn", "chromadb", "sentence_transformers", "langchain", "openai"]

[tool.ruff.lint.per-file-ignores]
# Tests can have longer lines and unused imports
"tests/**/*" = ["E501", "F401"]
# __init__.py can have unused imports
"__init__.py" = ["F401"]
# Menubar app can have print statements
"menubar_app.py" = ["T201"]
# MCP server can have print statements
"mcp_server.py" = ["T201"]
